FEATURE: UIv3 | Experimental option to use Mozilla/Firefox as browser widget on any platform (XulRunner or Firefox 3 must be installed) [The 8472]
FEATURE: Plug | Added resource downloader to provide way to download files from Sourceforge [amc1]
FEATURE: Plug | Added API methods to generically pop up the message box to a user [amc1]

CHANGE: Core  | added "upload_only" flag to AZMP/LTEP handshakes, disconnect any uploading_only peers we don't need / that don't need us when disconnect seeds when seeding is set [The 8472]
CHANGE: Core  | Further startup speed improvements [The 8472, amc1, parg]
CHANGE: Core  | Quicker to change a batch of files to "Do Not Download" in files view [amc1]
CHANGE: Core  | Added option to allow the removal of files linked outside the save directory when removing data [amc1]
CHANGE: UI    | Column menu option to disable fast renaming in files view, changed fast rename to behave more like the windows explorer [The 8472]

BUGFIX: Core  | Made change so that plugins could not inadvertently turn off Azureus extension protocol [amc1]
BUGFIX: Core  | The UDP tracker client option has been nonfunctional for quite a while now -> fixed [The 8472]


2008.04.10 | Azureus Vuze 3.0.5.2

FEATURE: UIv3 | Ability to rate directly from rating reminder activity entry [TuxPaper] 
FEATURE: UIv3 | Added progress spinner animation for the LightBox [knguyen]

CHANGE: Core  | Don't auto-UDP probe on initial announce if tracker not known to support UDP - hit on second and remember outcome [Parg]
CHANGE: Core  | Improve startup times by taking various torrent-load operations off main thread [Parg]
CHANGE: Core  | Add reason-messages for update check failures [Parg]
CHANGE: Core  | Use derived password to protect private key to allow us to persist password [Parg]
CHANGE: Core  | Get plugin update URL from version server to support potential future switch [Parg]
CHANGE: UI    | Run explicit tracker scrapes off UI thread to prevent blocking [Parg]